--- a/.config
+++ b/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86_64 3.2.4 Kernel Configuration
+# Linux/x86_64 3.2.6 Kernel Configuration
 #
 CONFIG_64BIT=y
 # CONFIG_X86_32 is not set
@@ -61,7 +61,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION=""
+CONFIG_LOCALVERSION="lenovog470"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_BZIP2=y
@@ -144,7 +144,8 @@ CONFIG_PID_NS=y
 CONFIG_NET_NS=y
 CONFIG_SCHED_AUTOGROUP=y
 CONFIG_MM_OWNER=y
-# CONFIG_SYSFS_DEPRECATED is not set
+CONFIG_SYSFS_DEPRECATED=y
+# CONFIG_SYSFS_DEPRECATED_V2 is not set
 CONFIG_RELAY=y
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_INITRAMFS_SOURCE=""
@@ -1894,13 +1895,14 @@ CONFIG_NETDEVICES=y
 CONFIG_NET_CORE=y
 CONFIG_BONDING=m
 CONFIG_DUMMY=m
-# CONFIG_EQUALIZER is not set
+CONFIG_EQUALIZER=m
 CONFIG_NET_FC=y
 CONFIG_MII=y
 CONFIG_IEEE802154_DRIVERS=m
 # CONFIG_IEEE802154_FAKEHARD is not set
 CONFIG_IFB=m
-# CONFIG_MACVLAN is not set
+CONFIG_MACVLAN=m
+CONFIG_MACVTAP=m
 CONFIG_NETCONSOLE=y
 CONFIG_NETPOLL=y
 CONFIG_NETPOLL_TRAP=y
@@ -2143,7 +2145,7 @@ CONFIG_SLHC=m
 # CONFIG_SLIP_SMART is not set
 # CONFIG_SLIP_MODE_SLIP6 is not set
 CONFIG_TR=y
-# CONFIG_PCMCIA_IBMTR is not set
+CONFIG_PCMCIA_IBMTR=m
 CONFIG_IBMOL=m
 CONFIG_3C359=m
 CONFIG_TMS380TR=m
@@ -4828,15 +4830,13 @@ CONFIG_PANEL=m
 CONFIG_PANEL_PARPORT=0
 CONFIG_PANEL_PROFILE=5
 # CONFIG_PANEL_CHANGE_MESSAGE is not set
-CONFIG_R8187SE=m
+# CONFIG_R8187SE is not set
 # CONFIG_RTL8192U is not set
 # CONFIG_RTL8192E is not set
-CONFIG_R8712U=m
-# CONFIG_R8712_AP is not set
-CONFIG_RTS_PSTOR=m
-# CONFIG_RTS_PSTOR_DEBUG is not set
+# CONFIG_R8712U is not set
+# CONFIG_RTS_PSTOR is not set
 # CONFIG_RTS5139 is not set
-CONFIG_TRANZPORT=y
+# CONFIG_TRANZPORT is not set
 # CONFIG_POHMELFS is not set
 # CONFIG_IDE_PHISON is not set
 CONFIG_LINE6_USB=m
@@ -5131,7 +5131,7 @@ CONFIG_EDD=y
 CONFIG_EDD_OFF=y
 CONFIG_FIRMWARE_MEMMAP=y
 CONFIG_EFI_VARS=y
-CONFIG_DELL_RBU=m
+# CONFIG_DELL_RBU is not set
 # CONFIG_DCDBAS is not set
 CONFIG_DMIID=y
 CONFIG_DMI_SYSFS=m
@@ -5567,7 +5567,7 @@ CONFIG_HAVE_ARCH_KGDB=y
 CONFIG_HAVE_ARCH_KMEMCHECK=y
 CONFIG_TEST_KSTRTOX=m
 # CONFIG_STRICT_DEVMEM is not set
-# CONFIG_X86_VERBOSE_BOOTUP is not set
+CONFIG_X86_VERBOSE_BOOTUP=y
 CONFIG_EARLY_PRINTK=y
 # CONFIG_EARLY_PRINTK_DBGP is not set
 # CONFIG_DEBUG_STACKOVERFLOW is not set
