--- a/.config
+++ b/.config
@@ -1527,7 +1527,67 @@ CONFIG_PNP_DEBUG_MESSAGES=y
 # Protocols
 #
 CONFIG_PNPACPI=y
-# CONFIG_BLK_DEV is not set
+CONFIG_BLK_DEV=y
+CONFIG_BLK_DEV_FD=m
+CONFIG_PARIDE=m
+
+#
+# Parallel IDE high-level drivers
+#
+CONFIG_PARIDE_PD=m
+CONFIG_PARIDE_PCD=m
+CONFIG_PARIDE_PF=m
+CONFIG_PARIDE_PT=m
+CONFIG_PARIDE_PG=m
+
+#
+# Parallel IDE protocol modules
+#
+CONFIG_PARIDE_ATEN=m
+CONFIG_PARIDE_BPCK=m
+CONFIG_PARIDE_COMM=m
+CONFIG_PARIDE_DSTR=m
+CONFIG_PARIDE_FIT2=m
+CONFIG_PARIDE_FIT3=m
+CONFIG_PARIDE_EPAT=m
+CONFIG_PARIDE_EPATC8=y
+CONFIG_PARIDE_EPIA=m
+CONFIG_PARIDE_FRIQ=m
+CONFIG_PARIDE_FRPW=m
+CONFIG_PARIDE_KBIC=m
+CONFIG_PARIDE_KTTI=m
+CONFIG_PARIDE_ON20=m
+CONFIG_PARIDE_ON26=m
+CONFIG_BLK_DEV_PCIESSD_MTIP32XX=m
+CONFIG_BLK_CPQ_DA=m
+CONFIG_BLK_CPQ_CISS_DA=m
+CONFIG_CISS_SCSI_TAPE=y
+CONFIG_BLK_DEV_DAC960=m
+CONFIG_BLK_DEV_UMEM=m
+# CONFIG_BLK_DEV_COW_COMMON is not set
+CONFIG_BLK_DEV_LOOP=m
+CONFIG_BLK_DEV_LOOP_MIN_COUNT=8
+CONFIG_BLK_DEV_CRYPTOLOOP=m
+CONFIG_BLK_DEV_DRBD=m
+CONFIG_DRBD_FAULT_INJECTION=y
+CONFIG_BLK_DEV_NBD=m
+CONFIG_BLK_DEV_NVME=m
+CONFIG_BLK_DEV_OSD=m
+CONFIG_BLK_DEV_SX8=m
+CONFIG_BLK_DEV_UB=m
+CONFIG_BLK_DEV_RAM=m
+CONFIG_BLK_DEV_RAM_COUNT=16
+CONFIG_BLK_DEV_RAM_SIZE=4096
+# CONFIG_BLK_DEV_XIP is not set
+CONFIG_CDROM_PKTCDVD=m
+CONFIG_CDROM_PKTCDVD_BUFFERS=8
+# CONFIG_CDROM_PKTCDVD_WCACHE is not set
+CONFIG_ATA_OVER_ETH=m
+CONFIG_XEN_BLKDEV_FRONTEND=y
+CONFIG_XEN_BLKDEV_BACKEND=m
+CONFIG_VIRTIO_BLK=m
+# CONFIG_BLK_DEV_HD is not set
+CONFIG_BLK_DEV_RBD=m
 
 #
 # Misc devices
@@ -4933,7 +4993,7 @@ CONFIG_XEN_BACKEND=y
 CONFIG_XENFS=m
 CONFIG_XEN_COMPAT_XENFS=y
 CONFIG_XEN_SYS_HYPERVISOR=y
-CONFIG_XEN_XENBUS_FRONTEND=m
+CONFIG_XEN_XENBUS_FRONTEND=y
 CONFIG_XEN_GNTDEV=m
 CONFIG_XEN_GRANT_DEV_ALLOC=m
 CONFIG_SWIOTLB_XEN=y
@@ -4944,8 +5004,8 @@ CONFIG_STAGING=y
 # CONFIG_ET131X is not set
 # CONFIG_SLICOSS is not set
 CONFIG_USBIP_CORE=m
-# CONFIG_USBIP_VHCI_HCD is not set
-# CONFIG_USBIP_HOST is not set
+CONFIG_USBIP_VHCI_HCD=m
+CONFIG_USBIP_HOST=m
 # CONFIG_USBIP_DEBUG is not set
 # CONFIG_W35UND is not set
 CONFIG_PRISM2_USB=m
@@ -4958,7 +5018,11 @@ CONFIG_PANEL_PROFILE=5
 # CONFIG_PANEL_CHANGE_MESSAGE is not set
 # CONFIG_R8187SE is not set
 # CONFIG_RTL8192U is not set
-# CONFIG_RTLLIB is not set
+CONFIG_RTLLIB=m
+CONFIG_RTLLIB_CRYPTO_CCMP=m
+CONFIG_RTLLIB_CRYPTO_TKIP=m
+CONFIG_RTLLIB_CRYPTO_WEP=m
+# CONFIG_RTL8192E is not set
 # CONFIG_R8712U is not set
 # CONFIG_RTS_PSTOR is not set
 CONFIG_RTS5139=m
@@ -4996,7 +5060,7 @@ CONFIG_VME_TSI148=m
 # VME Device Drivers
 #
 CONFIG_VME_USER=m
-# CONFIG_VME_PIO2 is not set
+CONFIG_VME_PIO2=m
 
 #
 # VME Board Drivers
@@ -5043,7 +5107,7 @@ CONFIG_AD7816=m
 # CONFIG_AD7192 is not set
 CONFIG_ADT7310=m
 CONFIG_ADT7410=m
-# CONFIG_AD7280 is not set
+CONFIG_AD7280=m
 CONFIG_MAX1363=m
 CONFIG_MAX1363_RING_BUFFER=y
 
@@ -5059,22 +5123,22 @@ CONFIG_ADT7316_I2C=m
 #
 CONFIG_AD7150=m
 CONFIG_AD7152=m
-# CONFIG_AD7746 is not set
+CONFIG_AD7746=m
 
 #
 # Digital to analog converters
 #
-# CONFIG_AD5064 is not set
-# CONFIG_AD5360 is not set
-# CONFIG_AD5380 is not set
-# CONFIG_AD5421 is not set
+CONFIG_AD5064=m
+CONFIG_AD5360=m
+CONFIG_AD5380=m
+CONFIG_AD5421=m
 CONFIG_AD5624R_SPI=m
 CONFIG_AD5446=m
 CONFIG_AD5504=m
-# CONFIG_AD5764 is not set
+CONFIG_AD5764=m
 CONFIG_AD5791=m
-# CONFIG_AD5686 is not set
-# CONFIG_MAX517 is not set
+CONFIG_AD5686=m
+CONFIG_MAX517=m
 
 #
 # Direct Digital Synthesis
@@ -5099,7 +5163,7 @@ CONFIG_ADXRS450=m
 #
 # Network Analyzer, Impedance Converters
 #
-# CONFIG_AD5933 is not set
+CONFIG_AD5933=m
 
 #
 # Inertial measurement units
@@ -5134,7 +5198,7 @@ CONFIG_ADE7854_SPI=m
 # Resolver to digital converters
 #
 CONFIG_AD2S90=m
-# CONFIG_AD2S1200 is not set
+CONFIG_AD2S1200=m
 CONFIG_AD2S1210=m
 
 #
@@ -5143,10 +5207,12 @@ CONFIG_AD2S1210=m
 CONFIG_IIO_PERIODIC_RTC_TRIGGER=m
 CONFIG_IIO_GPIO_TRIGGER=m
 CONFIG_IIO_SYSFS_TRIGGER=m
-# CONFIG_IIO_SIMPLE_DUMMY is not set
+CONFIG_IIO_SIMPLE_DUMMY=m
+# CONFIG_IIO_SIMPLE_DUMMY_EVENTS is not set
+# CONFIG_IIO_SIMPLE_DUMMY_BUFFER is not set
 CONFIG_XVMALLOC=y
 CONFIG_ZRAM=m
-# CONFIG_ZRAM_DEBUG is not set
+CONFIG_ZRAM_DEBUG=y
 CONFIG_ZCACHE=m
 # CONFIG_WLAGS49_H2 is not set
 # CONFIG_WLAGS49_H25 is not set
@@ -5156,7 +5222,7 @@ CONFIG_ZCACHE=m
 CONFIG_FB_XGI=m
 CONFIG_ACPI_QUICKSTART=m
 CONFIG_SBE_2T3E3=m
-# CONFIG_USB_ENESTORAGE is not set
+CONFIG_USB_ENESTORAGE=m
 CONFIG_BCM_WIMAX=m
 # CONFIG_FT1000 is not set
 
@@ -5184,17 +5250,48 @@ CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4=m
 CONFIG_INTEL_MEI=m
 CONFIG_STAGING_MEDIA=y
 CONFIG_DVB_AS102=m
-# CONFIG_DVB_CXD2099 is not set
-# CONFIG_VIDEO_DT3155 is not set
-# CONFIG_EASYCAP is not set
-# CONFIG_VIDEO_GO7007 is not set
-# CONFIG_SOLO6X10 is not set
-# CONFIG_LIRC_STAGING is not set
+CONFIG_DVB_CXD2099=m
+CONFIG_VIDEO_DT3155=m
+CONFIG_DT3155_CCIR=y
+CONFIG_DT3155_STREAMING=y
+CONFIG_EASYCAP=m
+# CONFIG_EASYCAP_DEBUG is not set
+CONFIG_VIDEO_GO7007=m
+CONFIG_VIDEO_GO7007_USB=m
+CONFIG_VIDEO_GO7007_USB_S2250_BOARD=m
+CONFIG_VIDEO_GO7007_OV7640=m
+CONFIG_VIDEO_GO7007_SAA7113=m
+CONFIG_VIDEO_GO7007_SAA7115=m
+CONFIG_VIDEO_GO7007_TW9903=m
+CONFIG_VIDEO_GO7007_UDA1342=m
+CONFIG_VIDEO_GO7007_SONY_TUNER=m
+CONFIG_VIDEO_GO7007_TW2804=m
+CONFIG_SOLO6X10=m
+CONFIG_LIRC_STAGING=y
+CONFIG_LIRC_BT829=m
+CONFIG_LIRC_IGORPLUGUSB=m
+CONFIG_LIRC_IMON=m
+CONFIG_LIRC_PARALLEL=m
+CONFIG_LIRC_SASEM=m
+CONFIG_LIRC_SERIAL=m
+CONFIG_LIRC_SERIAL_TRANSMITTER=y
+CONFIG_LIRC_SIR=m
+CONFIG_LIRC_TTUSBIR=m
+CONFIG_LIRC_ZILOG=m
 
 #
 # Android
 #
-# CONFIG_ANDROID is not set
+CONFIG_ANDROID=y
+# CONFIG_ANDROID_BINDER_IPC is not set
+# CONFIG_ASHMEM is not set
+CONFIG_ANDROID_LOGGER=m
+# CONFIG_ANDROID_RAM_CONSOLE is not set
+CONFIG_ANDROID_TIMED_OUTPUT=y
+CONFIG_ANDROID_TIMED_GPIO=m
+# CONFIG_ANDROID_LOW_MEMORY_KILLER is not set
+CONFIG_ANDROID_SWITCH=m
+CONFIG_ANDROID_SWITCH_GPIO=m
 CONFIG_X86_PLATFORM_DEVICES=y
 # CONFIG_ACERHDF is not set
 # CONFIG_ASUS_LAPTOP is not set
@@ -5215,7 +5312,7 @@ CONFIG_THINKPAD_ACPI_ALSA_SUPPORT=y
 CONFIG_THINKPAD_ACPI_VIDEO=y
 CONFIG_THINKPAD_ACPI_HOTKEY_POLL=y
 CONFIG_SENSORS_HDAPS=m
-# CONFIG_INTEL_MENLOW is not set
+CONFIG_INTEL_MENLOW=m
 # CONFIG_EEEPC_LAPTOP is not set
 # CONFIG_ACPI_WMI is not set
 # CONFIG_ACPI_ASUS is not set
@@ -5240,7 +5337,7 @@ CONFIG_IOMMU_SUPPORT=y
 # CONFIG_AMD_IOMMU is not set
 # CONFIG_INTEL_IOMMU is not set
 # CONFIG_IRQ_REMAP is not set
-# CONFIG_VIRT_DRIVERS is not set
+CONFIG_VIRT_DRIVERS=y
 CONFIG_PM_DEVFREQ=y
 
 #
@@ -5426,7 +5523,7 @@ CONFIG_UBIFS_FS_XATTR=y
 CONFIG_UBIFS_FS_LZO=y
 CONFIG_UBIFS_FS_ZLIB=y
 # CONFIG_UBIFS_FS_DEBUG is not set
-# CONFIG_LOGFS is not set
+CONFIG_LOGFS=m
 CONFIG_CRAMFS=m
 CONFIG_SQUASHFS=m
 CONFIG_SQUASHFS_XATTR=y
@@ -5925,6 +6022,7 @@ CONFIG_TEXTSEARCH=y
 CONFIG_TEXTSEARCH_KMP=m
 CONFIG_TEXTSEARCH_BM=m
 CONFIG_TEXTSEARCH_FSM=m
+CONFIG_BTREE=y
 CONFIG_HAS_IOMEM=y
 CONFIG_HAS_IOPORT=y
 CONFIG_HAS_DMA=y
@@ -5932,5 +6030,6 @@ CONFIG_CHECK_SIGNATURE=y
 CONFIG_CPU_RMAP=y
 CONFIG_DQL=y
 CONFIG_NLATTR=y
+CONFIG_LRU_CACHE=m
 CONFIG_AVERAGE=y
 CONFIG_CORDIC=m
